:sparkles: feature: sepreate theme into pages

--- a/site/_includes/accent-text-block.liquid
+++ b/site/_includes/accent-text-block.liquid
@@ -1,4 +1,4 @@
-<section class="section theme-{{ include.theme }} accent-text-block">
+<section class="section theme-{{ include.theme }} accent-text-block padding-top-{{ include.padding-top }} padding-bottom-{{ include.padding-bottom }}">
   <div class="inner bg-clr-theme">
     <div class="text">
         <div class="h4">
