--- a/site/_includes/center-text.liquid
+++ b/site/_includes/center-text.liquid
@@ -1,7 +1,7 @@
-<section class="section theme-{{ include.theme }} center-text">
+<section class="section theme-{{ include.theme }} center-text padding-top-{{ include.padding-top }} padding-bottom-{{ include.padding-bottom }}">
   <div class="inner">
     <div class="h4 accent-clr">Lorem Ipsum Dolor Sit Amet</div>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis</p>
-    <a class="btn" href="/">{% if include.theme == 'med' %}<span>Learn More</span><span></span>{% else %}Learn More{% endif %}</a>
+    <a class="btn" href="{{ include.btn-dest }}">{% if include.theme == 'med' %}<span>{{ include.btn-text }}</span><span></span>{% else %}{{ include.btn-text }}{% endif %}</a>
   </div>
 </section>
