--- a/src/styles/components/core/_TextWithImageBlock.scss
+++ b/src/styles/components/core/_TextWithImageBlock.scss
@@ -7,6 +7,7 @@
     }
 
     .block:first-of-type {
+      align-items: flex-start;
       display: flex;
       flex-direction: column;
       justify-content: center;
