--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -22,3 +22,4 @@
 @import 'components/core/CenterText';
 @import 'components/core/TextWithImageBlock.scss';
 @import 'components/core/AccentTextBlock.scss';
+@import 'components/core/TextWithImage.scss';
