--- a/src/styles/components/core/_AccentTextBlock.scss
+++ b/src/styles/components/core/_AccentTextBlock.scss
@@ -1,81 +1,58 @@
 
-.pseudo-styles {
-  border: none;
-  content: '';
-  height: $Base * 4;
-  mask-repeat: no-repeat;
-  mask-size: contain;
-  position: absolute;
-  width: $Base;
-}
 
 .accent-text-block {
   overflow: visible;
   position: relative;
 
   &.theme-lt {
-    &:before {
-      background-color: $ClrLtAcc2;
-      mask-image: url(../svgs/theme-lt-decor-long.svg);
+    > .absolute-decor svg path {
+      fill: $ClrLtAcc2;
     }
 
-    .text:before {
-      background-color: $ClrLtBlue;
-      mask-image: url(../svgs/theme-lt-decor-long.svg);
+    .text .absolute-decor svg path {
+      fill: $ClrLtBlue;
     }
   }
 
   &.theme-med {
-    &:before {
-      background-color: $ClrMedAcc2;
-      mask-image: url(../svgs/theme-med-decor-long.svg);
+    > .absolute-decor svg path {
+      fill: $ClrMedAcc2;
     }
 
-    .text:before {
-      background-color: $ClrLtGreen;
-      mask-image: url(../svgs/theme-med-decor-long.svg);
+    .absolute-corner path {
+      fill: $ClrGreen;
     }
 
-    .inner {
-      &:before, &:after {
-        background-color: $ClrGreen;
-        content: '';
-        height: $Base * 4;
-        mask-size: $Base * 4 $Base * 4;
-        position: absolute;
-        width: $Base * 4;
-      }
-
-      &:before {
-        left: 0;
-        mask-image: url('../images/theme-med-mask-shape-flipped.png');
-        top: 0;
-      }
-
-      &:after {
-        bottom: 0;
-        mask-image: url('../images/theme-med-mask-shape.png');
-        right: 0;
-      }
+    .text .absolute-decor svg path {
+      fill: $ClrLtGreen;
     }
   }
 
   &.theme-dark {
-    &:before {
-      background-color: $ClrDarkAcc2;
-      mask-image: url(../svgs/theme-dark-decor-long.svg);
+    > .absolute-decor svg path {
+      fill: $ClrDarkAcc1;
     }
 
-    .text:before {
-      background-color: $ClrLtGold;
-      mask-image: url(../svgs/theme-dark-decor-long.svg);
+    .absolute-corner path {
+      fill: $ClrGold;
+    }
+
+    .text .absolute-decor svg path {
+      fill: $ClrLtGold;
     }
   }
 
-  &:before {
-    @extend .pseudo-styles;
+  > .absolute-decor {
+    height: $Base * 4;
     left: $Base / 4;
+    position: absolute;
     top: $Base / -2;
+    width: $Base;
+
+    svg {
+      height: 100%;
+      width: 100%;
+    }
   }
 
   .inner {
@@ -84,22 +61,52 @@
     padding: 0;
     position: relative;
 
-    &:before, &:after {
-        
+    .absolute-corner {
+      height: $Base * 4;
+      position: absolute;
+      width: $Base * 4;
+
+      svg {
+        height: $Base * 4;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: $Base * 4;
+      }
+
+      &:first-of-type {
+        left: 0;
+        top: 0;
+        transform: rotate(180deg);
+      }
+
+      &:nth-of-type(2) {
+        bottom: 0;
+        right: 0;
+      }
     }
 
     .text {
       margin: 0 auto;
       max-width: $ContentMaxWidth * 0.7;
       overflow: hidden;
+      overflow: hidden;
       padding: $Base * 2 0;
       text-align: center;
 
-      &:before {
-        @extend .pseudo-styles;
-        bottom: $Base * -2;
+      .absolute-decor {
+        bottom: 0;
+        height: $Base * 2;
         overflow: hidden;
+        position: absolute;
         right: 20%;
+        width: $Base;
+
+        svg {
+          height: $Base * 4;
+          width: 100%;
+        }
+
       }
     }
   }
