:art: Improving structure: ready to share

--- a/site/_includes/head.html
+++ b/site/_includes/head.html
@@ -6,7 +6,7 @@
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-  <!-- favicon -->
+  <!-- favicon --><!--
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
@@ -14,8 +14,8 @@
   <link rel="shortcut icon" href="/assets/images/favicon.ico">
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="msapplication-config" content="/assets/images/browserconfig.xml">
-  <meta name="theme-color" content="#ffffff">
-  <!-- opengraph -->
+  <meta name="theme-color" content="#ffffff">-->
+  <!-- opengraph --><!--
   <meta property="og:type" content="business.business">
   <meta property="og:title" content="Deja Vu Salon">
   <meta property="og:url" content="https://dejavusalonminden.com/">
@@ -24,10 +24,10 @@
   <meta property="business:contact_data:locality" content="Minden">
   <meta property="business:contact_data:region" content="NV">
   <meta property="business:contact_data:postal_code" content="89423">
-  <meta property="business:contact_data:country_name" content="United States">
+  <meta property="business:contact_data:country_name" content="United States">-->
 
   <title>
-    Deja Vu Salon
+    Infosec
   </title>
 
   <!-- CSS -->
@@ -37,7 +37,6 @@
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
-  {% include google-analytics.html %}
 
   <!--Jquery-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
