--- a/src/styles/structure/_Section.scss
+++ b/src/styles/structure/_Section.scss
@@ -137,7 +137,7 @@ section, footer, header {
 
   .inner {
     margin: 0 auto;
-    max-width: $BaseMaxWidth;
+    //  max-width: $BaseMaxWidth;
     padding: 0 $BaseGutter;
     position: relative;
     width: 100%;
