--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -21,3 +21,4 @@
 @import 'components/core/CenterText';
 @import 'components/core/AccentTextBlock.scss';
 @import 'components/core/TextWithImage.scss';
+@import 'components/core/bday.scss';
